实验二/samples/bad1.out
DeclList ->
Type -> void
Type -> int

*** Error line 1 column 13
void foo(int) {
            ^
*** parse error

